--- a/index.html
+++ b/index.html
@@ -16,32 +16,11 @@
     />
     <!-- connect google fonts ends here -->
 
-    <!-- custom css starts here -->
-    <style>
-      body {
-        font-family: "Hind Siliguri", sans-serif;
-        scroll-behavior: smooth;
-      }
-      .gradient-bg {
-        background: linear-gradient(135deg, #1e40af 0%, #3b82f6 100%);
-      }
-
-      /* হেডলাইনের জন্য */
-      h1,
-      h2,
-      h3 {
-        font-family: "Baloo Da 2", cursive;
-        font-weight: 700; /* ইমেজের মতো বোল্ড লুক পেতে */
-      }
-
-      /* সাধারণ প্যারাগ্রাফের জন্য */
-      p {
-        font-family: "Hind Siliguri", sans-serif;
-      }
-    </style>
-    <!-- custom css ends here -->
+    <!-- link custom css STARTS here -->
+    <link rel="stylesheet" href="./style.css" />
+    <!-- link custom css ENDS here -->
   </head>
-  <body class="bg-slate-50 text-slate-900">
+  <body class="body bg-slate-50 text-slate-900 overflow-x-hidden">
     <!-- Navbar Section Starts Here -->
     <nav
       class="bg-white/80 backdrop-blur-md sticky top-0 z-50 border-b border-slate-200"
@@ -60,7 +39,7 @@
           </h1>
         </div>
 
-        <div class="flex items-center gap-8">
+        <div class="hidden md:flex items-center gap-8">
           <a
             href="#"
             class="text-slate-600 font-semibold hover:text-indigo-600 transition"
@@ -93,21 +72,14 @@
               <a
                 href="#"
                 class="block px-6 py-4 text-sm text-slate-700 hover:bg-indigo-50 hover:text-indigo-600 transition font-medium border-b border-slate-50"
+                >Spoken English Bootcamp</a
               >
-                Level 1: Spoken English
-              </a>
-              <a
-                href="#"
-                class="block px-6 py-4 text-sm text-slate-700 hover:bg-indigo-50 hover:text-indigo-600 transition font-medium border-b border-slate-50"
-              >
-                Level 2: Advanced Mastery
-              </a>
+
               <a
                 href="#"
                 class="block px-6 py-4 text-sm text-slate-700 hover:bg-indigo-50 hover:text-indigo-600 transition font-medium"
+                >Vocabulary Bootcamp</a
               >
-                Vocabulary Mastery
-              </a>
             </div>
           </div>
 
@@ -118,8 +90,68 @@
             Enroll Now
           </a>
         </div>
+
+        <div class="md:hidden flex items-center">
+          <button
+            id="mobile-menu-button"
+            class="text-slate-600 focus:outline-none"
+          >
+            <svg
+              id="menu-icon"
+              class="w-8 h-8"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              ></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+
+      <div
+        id="mobile-menu"
+        class="hidden md:hidden bg-white border-t border-slate-100 px-4 py-6 space-y-4 shadow-xl"
+      >
+        <a
+          href="#"
+          class="block text-slate-600 font-semibold py-2 border-b border-slate-50"
+          >Home</a
+        >
+        <div class="space-y-2">
+          <p
+            class="text-xs font-bold text-slate-400 uppercase tracking-widest mt-4"
+          >
+            Our Courses
+          </p>
+          <a
+            href="#"
+            class="block text-slate-700 font-medium pl-4 py-2 hover:text-indigo-600"
+            >Spoken English Bootcamp</a
+          >
+
+          <a
+            href="#"
+            class="block text-slate-700 font-medium pl-4 py-2 hover:text-indigo-600"
+            >Vocabulary Bootcamp</a
+          >
+        </div>
+        <div class="pt-4">
+          <a
+            href="#enroll"
+            class="block w-full bg-indigo-600 text-white text-center px-6 py-4 rounded-xl font-bold shadow-lg shadow-indigo-100"
+          >
+            Enroll Now
+          </a>
+        </div>
       </div>
     </nav>
+
     <!-- Navbar Section Ends Here -->
 
     <!-- Banner Section Starts Here -->
@@ -282,8 +314,7 @@
             class="text-3xl md:text-5xl font-black text-slate-800 flex justify-center items-center gap-3"
           >
             এই বুটক্যাম্পের
-            <span
-              class="bg-gradient-to-r from-orange-500 to-pink-500 text-white px-4 py-1 rounded-2xl italic"
+            <span class="bg-red-500 text-white px-4 py-1 rounded-2xl italic"
               >X ফ্যাক্টর</span
             >
           </h2>
@@ -451,7 +482,7 @@
           <h2 class="text-3xl md:text-5xl font-black text-slate-800">
             সাফল্য পাওয়ার
             <span
-              class="bg-gradient-to-r from-purple-500 to-pink-500 text-white px-4 py-1 rounded-full italic"
+              class="bg-red-500 text-white px-4 py-1 rounded-full italic"
               >৪টি সহজ ধাপ</span
             >
           </h2>
@@ -540,7 +571,7 @@
         >
           <a
             href="#enroll"
-            class="bg-gradient-to-r from-orange-500 to-pink-500 text-white px-10 py-4 rounded-2xl font-black text-xl shadow-lg hover:scale-105 transition active:scale-95"
+            class="bg-red-500 text-white px-10 py-4 rounded-2xl font-black text-xl shadow-lg hover:scale-105 transition active:scale-95"
           >
             এখনই এনরোল করো
           </a>
@@ -560,8 +591,7 @@
         <div class="text-center mb-16">
           <h2 class="text-3xl md:text-5xl font-black text-slate-800">
             তুমি কী
-            <span
-              class="bg-gradient-to-r from-orange-500 to-pink-500 text-white px-3 py-1 rounded-full italic"
+            <span class="bg-red-500 text-white px-3 py-1 rounded-full italic"
               >শিখবে?</span
             >
           </h2>
@@ -731,7 +761,7 @@
           <h2 class="text-3xl md:text-5xl font-black text-slate-800">
             তোমার
             <span
-              class="bg-gradient-to-r from-orange-500 to-pink-500 text-white px-3 py-1 rounded-full italic shadow-lg shadow-pink-200"
+              class="bg-red-500 text-white px-3 py-1 rounded-full italic shadow-lg shadow-pink-200"
               >যত প্রশ্ন</span
             >
             বুটক্যাম্প সম্পর্কে
@@ -865,41 +895,6 @@
         </div>
       </div>
     </section>
-
-    <script>
-      document.querySelectorAll(".faq-btn").forEach((button) => {
-        button.addEventListener("click", () => {
-          const faqItem = button.parentElement;
-          const answer = button.nextElementSibling;
-          const icon = button.querySelector(".faq-icon");
-
-          // Close other open FAQ items
-          document.querySelectorAll(".faq-answer").forEach((el) => {
-            if (el !== answer) {
-              el.style.maxHeight = null;
-              el.parentElement.classList.remove(
-                "ring-2",
-                "ring-blue-500",
-                "shadow-xl",
-              );
-              el.previousElementSibling.querySelector(".faq-icon").textContent =
-                "+";
-            }
-          });
-
-          // Toggle current FAQ item
-          if (answer.style.maxHeight) {
-            answer.style.maxHeight = null;
-            icon.textContent = "+";
-            faqItem.classList.remove("ring-2", "ring-blue-500", "shadow-xl");
-          } else {
-            answer.style.maxHeight = answer.scrollHeight + "px";
-            icon.textContent = "−";
-            faqItem.classList.add("ring-2", "ring-blue-500", "shadow-xl");
-          }
-        });
-      });
-    </script>
 
     <!-- your all questions ends here -->
 
@@ -1060,7 +1055,7 @@
       class="fixed bottom-6 left-6 z-[100] transform transition-transform hover:scale-105"
     >
       <div
-        class="bg-gradient-to-r from-pink-500 to-rose-600 text-white p-4 rounded-2xl shadow-2xl border border-white/20 backdrop-blur-sm"
+        class="bg-red-500 text-white p-4 rounded-2xl shadow-2xl border border-white/20 backdrop-blur-sm"
       >
         <div class="flex flex-col gap-1">
           <p class="text-sm md:text-base font-bold flex justify-between gap-4">
@@ -1077,30 +1072,210 @@
     <!-- fiexd badge ends here -->
 
     <!-- Footer Section Starts Here -->
-    <footer class="py-12 bg-slate-900 text-slate-400 text-center px-4">
-      <p class="mb-2">
-        © 2026 <span class="text-white font-bold">Fluentosh</span>. All rights
-        reserved.
-      </p>
-      <p class="text-sm">English Learning Made Easy for Everyone.</p>
+    <footer class="bg-[#F3F6FA] pt-16 pb-8 px-6 border-t border-slate-200">
+      <!-- address -->
+      <div class="max-w-6xl mx-auto">
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-12 text-left"
+        >
+          <div class="flex flex-col space-y-6">
+            <div class="flex items-center gap-2">
+              <div
+                class="w-10 h-10 bg-indigo-600 rounded-xl flex items-center justify-center text-white font-bold text-xl shadow-lg"
+              >
+                F
+              </div>
+              <h2
+                class="text-2xl font-black text-slate-800 tracking-tighter uppercase"
+              >
+                FLUENTOSH
+              </h2>
+            </div>
+            <div class="space-y-3 text-slate-600">
+              <div class="flex items-start gap-3">
+                <span class="text-indigo-600">📍</span>
+                <p class="text-sm leading-relaxed">
+                  Level-4, 34, Awal Centre, Banani, Dhaka
+                </p>
+              </div>
+              <div class="flex items-center gap-3">
+                <span class="text-indigo-600">✉️</span>
+                <p class="text-sm">web@fluentosh-english.com</p>
+              </div>
+            </div>
+
+            <div
+              class="bg-white p-5 rounded-2xl shadow-sm border border-slate-100 flex items-center gap-4 max-w-[280px]"
+            >
+              <div class="text-slate-800 text-2xl">
+                <svg
+                  class="w-8 h-8"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1.5"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  ></path>
+                </svg>
+              </div>
+              <div>
+                <p
+                  class="text-[10px] text-slate-400 font-bold uppercase tracking-wider"
+                >
+                  যেকোন জিজ্ঞাসায় ফোন করো
+                </p>
+                <p class="text-lg font-black text-slate-800">01332-502004</p>
+                <p class="text-[10px] text-slate-500">
+                  (Sat - Thu, 10:00 AM to 7:00 PM)
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- লিংক সমূহ -->
+          <div>
+            <h3 class="font-bold text-slate-800 mb-6 text-lg">লিঙ্কসমূহ</h3>
+            <ul class="space-y-4 text-slate-500 text-sm font-medium">
+              <li>
+                <a href="#" class="hover:text-indigo-600 transition-colors"
+                  >About Us</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-indigo-600 transition-colors"
+                  >Success Page</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-indigo-600 transition-colors"
+                  >Blog</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-indigo-600 transition-colors"
+                  >Refund policy</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-indigo-600 transition-colors"
+                  >Privacy Policy</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- social media link -->
+          <div>
+            <h3 class="font-bold text-slate-800 mb-6 text-lg">
+              সোশ্যাল মিডিয়া
+            </h3>
+            <ul class="space-y-4 text-slate-500 text-sm font-medium">
+              <li>
+                <a
+                  href="#"
+                  class="flex items-center gap-3 hover:text-blue-600 transition-colors"
+                >
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/733/733547.png"
+                    class="w-5 h-5"
+                    alt="FB"
+                  />
+                  ফেসবুক</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="flex items-center gap-3 hover:text-pink-600 transition-colors"
+                >
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png"
+                    class="w-5 h-5"
+                    alt="IG"
+                  />
+                  ইনস্ট্রাগ্রাম</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="flex items-center gap-3 hover:text-red-600 transition-colors"
+                >
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"
+                    class="w-5 h-5"
+                    alt="YT"
+                  />
+                  ইউটিউব</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="flex items-center gap-3 hover:text-blue-700 transition-colors"
+                >
+                  <img
+                    src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+                    class="w-5 h-5"
+                    alt="IN"
+                  />
+                  লিঙ্কডইন</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- app download link -->
+          <div class="flex flex-col items-start">
+            <h3 class="font-bold text-slate-800 mb-6 text-lg">
+              অ্যাপ ডাউনলোড করো
+            </h3>
+            <div class="space-y-3 w-full max-w-[160px]">
+              <a href="#" class="transition-transform hover:scale-105 block">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Download_on_the_App_Store_Badge.svg"
+                  alt="App Store"
+                  class="w-full"
+                />
+              </a>
+              <a href="#" class="transition-transform hover:scale-105 block">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+                  alt="Google Play"
+                  class="w-full"
+                />
+              </a>
+              <a href="#" class="transition-transform hover:scale-105 block">
+                <div
+                  class="bg-[#1A1A1A] text-white py-2 px-3 rounded-md flex items-center gap-2 border border-slate-700"
+                >
+                  <img
+                    src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg"
+                    class="w-4"
+                    alt="Microsoft"
+                  />
+                  <div class="leading-none">
+                    <p class="text-[7px] uppercase opacity-70">Get it from</p>
+                    <p class="text-sm font-semibold">Microsoft</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="mt-16 pt-8 border-t border-slate-200 text-center text-slate-400 text-xs"
+        >
+          <p>&copy; 2026 Fluentosh. All rights reserved.</p>
+        </div>
+      </div>
     </footer>
+
     <!-- Footer Section Ends Here -->
 
-    <!-- Script Section Starts Here -->
-    <script>
-      document
-        .getElementById("bootcampForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-          const name = document.getElementById("userName").value;
-          alert(
-            "ধন্যবাদ " +
-              name +
-              "! আপনার তথ্য আমরা পেয়েছি। ট্রানজেকশন আইডি চেক করে আমরা ২৪ ঘণ্টার মধ্যে আপনার হোয়াটসঅ্যাপ নম্বরে যোগাযোগ করব।",
-          );
-          this.reset();
-        });
-    </script>
-    <!-- Script Section Ends Here -->
+    <!-- connect js -->
+    <script src="main.js"></script>
   </body>
 </html>
