--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
               >
 
               <a
-                href="#"
+                href="./Vocabulary_course/vocabulary.html"
                 class="block px-6 py-4 text-sm text-slate-700 hover:bg-indigo-50 hover:text-indigo-600 transition font-medium"
-                >Vocabulary Bootcamp</a
+                >Vocabulary Course</a
               >
             </div>
           </div>
 
           <a
-            href="#enroll"
+            onclick="openModal()"
             class="bg-indigo-600 text-white px-6 py-2.5 rounded-full font-bold hover:bg-slate-900 transition-all shadow-xl shadow-indigo-100"
           >
             Enroll Now
@@ -136,14 +136,14 @@
           >
 
           <a
-            href="#"
+            href="./Vocabulary_course/vocabulary.html"
             class="block text-slate-700 font-medium pl-4 py-2 hover:text-indigo-600"
             >Vocabulary Bootcamp</a
           >
         </div>
         <div class="pt-4">
           <a
-            href="#enroll"
+            onclick="openModal()"
             class="block w-full bg-indigo-600 text-white text-center px-6 py-4 rounded-xl font-bold shadow-lg shadow-indigo-100"
           >
             Enroll Now
@@ -155,40 +155,38 @@
     <!-- Navbar Section Ends Here -->
 
     <!-- Banner Section Starts Here -->
-    <header
-      class="gradient-bg text-white pt-20 pb-32 px-4 relative overflow-hidden"
-    >
-      <div class="max-w-4xl mx-auto text-center relative z-10">
-        <div
-          class="inline-block bg-yellow-400 text-blue-900 px-4 py-1 rounded-full text-sm font-black uppercase mb-6 animate-bounce"
-        >
-          Special 10 Days Challenge
-        </div>
-        <h2 class="text-4xl md:text-6xl font-extrabold mb-6 leading-[1.2]">
-          ইংরেজিতে কথা বলার ভয় কাটান <br /><span
-            class="text-yellow-300 underline decoration-wavy"
-            >মাত্র ১০ দিনে!</span
-          >
-        </h2>
-        <p class="text-lg md:text-xl mb-10 text-blue-50 max-w-2xl mx-auto">
-          Be Verb এবং Tense-এর সঠিক ব্যবহার শিখে আত্মবিশ্বাসের সাথে ইংরেজি বলা
-          শুরু করুন। কোনো মুখস্থ বিদ্যা নয়, সরাসরি প্র্যাকটিক্যাল স্পিকিং!
-        </p>
-        <div class="flex flex-col md:flex-row justify-center gap-4">
-          <a
-            href="#enroll"
-            class="bg-white text-blue-600 px-10 py-4 rounded-xl text-xl font-bold hover:bg-yellow-400 hover:text-blue-900 transition-all transform hover:scale-105 shadow-2xl"
-          >
-            মাত্র ১০০ টাকায় জয়েন করুন
-          </a>
-        </div>
-      </div>
-      <div
-        class="absolute top-0 left-0 w-64 h-64 bg-blue-400/20 rounded-full -translate-x-1/2 -translate-y-1/2"
-      ></div>
-      <div
-        class="absolute bottom-0 right-0 w-96 h-96 bg-indigo-400/10 rounded-full translate-x-1/3 translate-y-1/3"
-      ></div>
+    <header class="gradient-bg text-white pt-24 pb-36 px-4 relative overflow-hidden">
+  <div class="max-w-4xl mx-auto text-center relative z-10">
+    <div class="inline-block bg-yellow-400 text-blue-900 px-6 py-2 rounded-full text-sm font-black uppercase mb-8 animate-bounce shadow-lg">
+      🎯 10-Day Tense Mastery Challenge
+    </div>
+
+    <h2 class="text-4xl md:text-7xl font-extrabold mb-8 leading-[1.2] tracking-tight">
+      টেন্সের ভয় কাটবে এবার, <br />
+      <span class="text-yellow-300 underline decoration-wavy decoration-2 underline-offset-8">
+        কথা বলুন আত্মবিশ্বাসে!
+      </span>
+    </h2>
+
+    <p class="text-xl md:text-2xl mb-12 text-blue-50 max-w-3xl mx-auto leading-relaxed font-medium">
+      ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়? ১০ দিনের এই ইনটেনসিভ বুটক্যাম্পে আমরা ব্যাকরণ মুখস্থ করব না, বরং টেন্সের সঠিক প্রয়োগ শিখে সরাসরি কথা বলা শুরু করব।
+      <span class="block mt-4 text-yellow-100 font-semibold uppercase tracking-widest">
+        "আপনার ফ্লুয়েন্সি মাত্র ১০ দিনের দূরত্বে!"
+      </span>
+    </p>
+
+    <div class="flex flex-col md:flex-row justify-center gap-4">
+      <a
+        onclick="openModal()"
+        class="cursor-pointer bg-white text-blue-600 px-12 py-5 rounded-2xl text-xl font-black hover:bg-yellow-400 hover:text-blue-900 transition-all transform hover:scale-105 shadow-[0_20px_50px_rgba(8,_112,_184,_0.5)]"
+      >
+        বুটক্যাম্পে সিট বুক করুন 🚀
+      </a>
+    </div>
+  </div>
+
+  <div class="absolute top-0 left-0 w-72 h-72 bg-blue-400/20 rounded-full -translate-x-1/2 -translate-y-1/2 blur-3xl"></div>
+  <div class="absolute bottom-0 right-0 w-[500px] h-[500px] bg-indigo-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px]"></div>
     </header>
     <!-- Banner Section Ends Here -->
 
@@ -481,8 +479,7 @@
         <div class="text-center mb-16">
           <h2 class="text-3xl md:text-5xl font-black text-slate-800">
             সাফল্য পাওয়ার
-            <span
-              class="bg-red-500 text-white px-4 py-1 rounded-full italic"
+            <span class="bg-red-500 text-white px-4 py-1 rounded-full italic"
               >৪টি সহজ ধাপ</span
             >
           </h2>
@@ -570,7 +567,7 @@
           class="mt-16 flex flex-col md:flex-row justify-center items-center gap-6"
         >
           <a
-            href="#enroll"
+            onclick="openModal()"
             class="bg-red-500 text-white px-10 py-4 rounded-2xl font-black text-xl shadow-lg hover:scale-105 transition active:scale-95"
           >
             এখনই এনরোল করো
@@ -955,7 +952,7 @@
                 class="absolute -inset-1 bg-gradient-to-r from-orange-500 to-pink-600 rounded-2xl blur opacity-25 group-hover:opacity-75 transition duration-1000 group-hover:duration-200"
               ></div>
               <a
-                href="#enroll"
+                onclick="openModal()"
                 class="relative bg-gradient-to-r from-orange-500 to-pink-500 text-white px-12 py-5 rounded-2xl font-black text-xl flex items-center gap-3 hover:scale-105 transition active:scale-95 shadow-xl"
               >
                 এখনই এনরোল করো 🚀
@@ -968,10 +965,37 @@
     <!-- তাহলে আর দেরি কেন করবেন? Section Ends Here -->
 
     <!-- Enroll Section Starts Here -->
-    <section id="enroll" class="py-20 bg-slate-100 px-4">
+    <section
+      id="enroll-modal"
+      class="hidden fixed inset-0 z-[100] flex items-center justify-center p-4"
+    >
       <div
-        class="max-w-5xl mx-auto bg-white rounded-3xl shadow-2xl overflow-hidden flex flex-col md:flex-row"
+        class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm"
+        onclick="closeModal()"
+      ></div>
+
+      <div
+        class="relative max-w-5xl w-full bg-white rounded-3xl shadow-2xl overflow-hidden flex flex-col md:flex-row"
       >
+        <button
+          onclick="closeModal()"
+          class="absolute top-4 right-4 text-slate-400 hover:text-slate-800 z-10"
+        >
+          <svg
+            class="w-8 h-8"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M6 18L18 6M6 6l12 12"
+            ></path>
+          </svg>
+        </button>
+
         <div class="md:w-1/2 bg-blue-600 p-10 text-white">
           <h3 class="text-3xl font-bold mb-6">ভর্তি পদ্ধতি</h3>
           <p class="mb-8 text-blue-100 italic">
@@ -987,60 +1011,49 @@
               <p class="text-2xl font-mono font-bold">01XXX-XXXXXX</p>
             </div>
           </div>
-          <div class="mt-10 flex items-center gap-3">
-            <div
-              class="w-12 h-12 bg-yellow-400 rounded-full flex items-center justify-center text-blue-900 text-2xl animate-pulse"
-            >
-              ✓
-            </div>
-            <p class="font-bold">পেমেন্ট করার ৫ মিনিটে কনফার্মেশন!</p>
-          </div>
         </div>
 
-        <div class="md:w-1/2 p-10">
+        <div class="md:w-1/2 p-10 bg-white">
           <form id="bootcampForm" class="space-y-5">
             <div>
-              <label
-                class="block text-sm font-bold text-slate-700 mb-1 uppercase tracking-wider"
+              <label class="block text-sm font-bold text-slate-700 mb-1"
                 >পূর্ণ নাম</label
               >
               <input
                 type="text"
                 id="userName"
-                placeholder="আপনার নাম লিখুন"
+                placeholder="আপনার নাম"
                 required
-                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:bg-white outline-none transition"
+                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 outline-none"
               />
             </div>
             <div>
-              <label
-                class="block text-sm font-bold text-slate-700 mb-1 uppercase tracking-wider"
-                >হোয়াটসঅ্যাপ নম্বর</label
+              <label class="block text-sm font-bold text-slate-700 mb-1"
+                >হোয়াটসঅ্যাপ নম্বর</label
               >
               <input
                 type="tel"
                 id="userPhone"
                 placeholder="01XXXXXXXXX"
                 required
-                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:bg-white outline-none transition"
+                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 outline-none"
               />
             </div>
             <div>
-              <label
-                class="block text-sm font-bold text-slate-700 mb-1 uppercase tracking-wider"
-                >টাকা পাঠানোর পর TrxID</label
+              <label class="block text-sm font-bold text-slate-700 mb-1"
+                >TrxID</label
               >
               <input
                 type="text"
                 id="trxId"
                 placeholder="উদাহরণ: AK89H..."
                 required
-                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 focus:ring-2 focus:ring-blue-500 focus:bg-white outline-none transition"
+                class="w-full bg-slate-50 border border-slate-200 rounded-lg px-4 py-3 outline-none"
               />
             </div>
             <button
               type="submit"
-              class="w-full bg-blue-600 text-white font-black py-4 rounded-xl text-lg hover:bg-blue-700 transition shadow-xl shadow-blue-200 active:scale-95"
+              class="w-full bg-blue-600 text-white font-black py-4 rounded-xl hover:bg-blue-700 transition"
             >
               ভর্তি নিশ্চিত করুন 🚀
             </button>
@@ -1048,10 +1061,12 @@
         </div>
       </div>
     </section>
+
     <!-- Enroll Section Ends Here -->
 
-    <!-- fiexd badge -->
+    <!-- fiexd badge ‍STARTS here -->
     <div
+      id="enroll-badge"
       class="fixed bottom-6 left-6 z-[100] transform transition-transform hover:scale-105"
     >
       <div
@@ -1069,7 +1084,7 @@
         </div>
       </div>
     </div>
-    <!-- fiexd badge ends here -->
+    <!-- fiexd badge ENDS here -->
 
     <!-- Footer Section Starts Here -->
     <footer class="bg-[#F3F6FA] pt-16 pb-8 px-6 border-t border-slate-200">
