--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       class="bg-white/80 backdrop-blur-md sticky top-0 z-50 border-b border-slate-200"
     >
       <div
-        class="max-w-6xl mx-auto px-4 py-4 flex justify-between items-center"
+        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
       >
         <div class="flex items-center gap-2">
           <div
@@ -155,49 +155,101 @@
     <!-- Navbar Section Ends Here -->
 
     <!-- Banner Section Starts Here -->
-    <header class="gradient-bg text-white pt-24 pb-36 px-4 relative overflow-hidden">
-  <div class="max-w-4xl mx-auto text-center relative z-10">
-    <div class="inline-block bg-yellow-400 text-blue-900 px-6 py-2 rounded-full text-sm font-black uppercase mb-8 animate-bounce shadow-lg">
-      🎯 10-Day Tense Mastery Challenge
-    </div>
+    <header
+      class="relative min-h-[90vh] lg:min-h-screen flex items-center justify-center bg-[#05070a] text-white pt-5 pb-20 md:pb-32 px-4 overflow-hidden font-['Plus_Jakarta_Sans',sans-serif]"
+    >
+      <div
+        class="absolute top-0 left-0 w-[300px] md:w-[500px] h-[300px] md:h-[500px] bg-indigo-600/15 rounded-full -translate-x-1/2 -translate-y-1/2 blur-[100px] md:blur-[140px]"
+      ></div>
+      <div
+        class="absolute bottom-0 right-0 w-[400px] md:w-[600px] h-[400px] md:h-[600px] bg-blue-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px] md:blur-[140px]"
+      ></div>
 
-    <h2 class="text-4xl md:text-7xl font-extrabold mb-8 leading-[1.2] tracking-tight">
-      টেন্সের ভয় কাটবে এবার, <br />
-      <span class="text-yellow-300 underline decoration-wavy decoration-2 underline-offset-8">
-        কথা বলুন আত্মবিশ্বাসে!
-      </span>
-    </h2>
+      <div class="w-full max-w-7xl mx-auto text-center relative z-10">
+        <h1 class="font-black tracking-tight flex flex-col gap-2 md:gap-4">
+          <span
+            class="text-3xl sm:text-4xl md:text-6xl lg:text-7xl text-slate-300"
+          >
+            শূন্য থেকে শুরু করে
+          </span>
 
-    <p class="text-xl md:text-2xl mb-12 text-blue-50 max-w-3xl mx-auto leading-relaxed font-medium">
-      ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়? ১০ দিনের এই ইনটেনসিভ বুটক্যাম্পে আমরা ব্যাকরণ মুখস্থ করব না, বরং টেন্সের সঠিক প্রয়োগ শিখে সরাসরি কথা বলা শুরু করব।
-      <span class="block mt-4 text-yellow-100 font-semibold uppercase tracking-widest">
-        "আপনার ফ্লুয়েন্সি মাত্র ১০ দিনের দূরত্বে!"
-      </span>
-    </p>
+          <span
+            class="text-4xl sm:text-5xl md:text-7xl lg:text-8xl text-transparent bg-clip-text bg-gradient-to-b from-white to-slate-500"
+          >
+            হয়ে ওঠো
+          </span>
 
-    <div class="flex flex-col md:flex-row justify-center gap-4">
-      <a
-        onclick="openModal()"
-        class="cursor-pointer bg-white text-blue-600 px-12 py-5 rounded-2xl text-xl font-black hover:bg-yellow-400 hover:text-blue-900 transition-all transform hover:scale-105 shadow-[0_20px_50px_rgba(8,_112,_184,_0.5)]"
-      >
-        বুটক্যাম্পে সিট বুক করুন 🚀
-      </a>
-    </div>
-  </div>
+          <span
+            class="text-[9vw] sm:text-5xl md:text-7xl lg:text-8xl text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-orange-500 drop-shadow-[0_10px_20px_rgba(234,179,8,0.2)]"
+          >
+            Confident Speaker
+          </span>
+        </h1>
 
-  <div class="absolute top-0 left-0 w-72 h-72 bg-blue-400/20 rounded-full -translate-x-1/2 -translate-y-1/2 blur-3xl"></div>
-  <div class="absolute bottom-0 right-0 w-[500px] h-[500px] bg-indigo-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px]"></div>
+        <div class="mt-6 md:mt-6 mb-6 md:mb-10 max-w-4xl mx-auto">
+          <p
+            class="text-base sm:text-lg md:text-2xl text-slate-400 leading-relaxed font-medium px-2"
+          >
+            ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়?
+            <span
+              class="text-indigo-400 font-bold uppercase tracking-[0.15em] text-base md:text-2xl"
+              >১৫ দিনের</span
+            >
+            এই ইনটেনসিভ বুটক্যাম্পে
+            <span class="text-white border-b border-indigo-500/50"
+              >আমরা ব্যাকরণ মুখস্থ করব না</span
+            >, কিন্তু
+            <span class="text-white border-b border-indigo-500/50"
+              >ABCD থেকে শুরু করে Auxiliary Verb, Tense, Preposition,</span
+            >
+
+            <span class="text-white border-b border-indigo-500/50"
+              >Sentence Making Structure</span
+            >
+            এবং
+            <span class="text-white border-b border-indigo-500/50"
+              >Oxford 3000 Vocabulary</span
+            >
+            সবই শিখব, যেভাবে শিখলে Fluently ইংলিশে কথা বলা যায়।
+          </p>
+
+          <div class="mt-4 md:mt-6">
+            <span
+              class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-xs md:text-base bg-indigo-500/5 px-4 py-2 rounded-lg border border-indigo-500/10"
+            >
+              🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
+            </span>
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col sm:flex-row justify-center items-center gap-4"
+        >
+          <a
+            onclick="openModal()"
+            class="w-full sm:w-auto group relative cursor-pointer overflow-hidden bg-white text-blue-950 px-8 md:px-12 py-4 md:py-6 rounded-2xl text-lg md:text-2xl font-black transition-all hover:scale-105 active:scale-95 shadow-2xl"
+          >
+            <span class="relative z-10 flex items-center justify-center gap-2">
+              বুটক্যাম্পে যুক্ত হোন 🚀
+            </span>
+            <div
+              class="absolute inset-0 bg-gradient-to-r from-yellow-400 to-orange-400 opacity-0 group-hover:opacity-100 transition-opacity"
+            ></div>
+          </a>
+        </div>
+      </div>
     </header>
     <!-- Banner Section Ends Here -->
 
     <!-- Your Pera Our Solution Section Starts Here -->
     <section class="bg-[#0f0721] py-20 px-4 font-['Hind_Siliguri',sans-serif]">
-      <div class="max-w-6xl mx-auto">
+      <div class="max-w-7xl mx-auto">
         <div class="text-center mb-16">
           <h2
             class="text-white text-3xl md:text-4xl font-bold uppercase tracking-widest flex justify-center items-center gap-4"
           >
-            Your Problem 😒 <span class="text-blue-500">|</span> Our Solution 😀
+            তোমার প্যারা 😒 <span class="text-blue-500">|</span> আমাদের সমাধান
+            😀
           </h2>
         </div>
 
@@ -306,7 +358,7 @@
 
     <!-- Course X-factors Section Starts Here -->
     <section class="py-20 bg-[#f8fafc] px-4 font-['Hind_Siliguri',sans-serif]">
-      <div class="max-w-6xl mx-auto">
+      <div class="max-w-7xl mx-auto">
         <div class="text-center mb-16">
           <h2
             class="text-3xl md:text-5xl font-black text-slate-800 flex justify-center items-center gap-3"
@@ -475,7 +527,7 @@
 
     <!-- 4 steps to success Section Starts Here -->
     <section class="py-20 bg-[#fdfaff] px-4 font-['Hind_Siliguri',sans-serif]">
-      <div class="max-w-6xl mx-auto">
+      <div class="max-w-7xl mx-auto">
         <div class="text-center mb-16">
           <h2 class="text-3xl md:text-5xl font-black text-slate-800">
             সাফল্য পাওয়ার
@@ -897,7 +949,7 @@
 
     <!-- তাহলে আর দেরি কেন করবেন? Section Starts Here -->
     <section class="py-20 bg-white px-4 font-['Hind_Siliguri',sans-serif]">
-      <div class="max-w-6xl mx-auto">
+      <div class="max-w-7xl mx-auto">
         <div
           class="relative bg-[#0f0715] rounded-[3rem] p-10 md:p-20 overflow-hidden text-center border border-white/10 shadow-2xl"
         >
@@ -1067,20 +1119,46 @@
     <!-- fiexd badge ‍STARTS here -->
     <div
       id="enroll-badge"
-      class="fixed bottom-6 left-6 z-[100] transform transition-transform hover:scale-105"
+      class="fixed bottom-4 left-4 md:bottom-6 md:left-6 z-[100] transform transition-all origin-bottom-left scale-90 md:scale-100 hover:scale-95 md:hover:scale-105"
     >
-      <div
-        class="bg-red-500 text-white p-4 rounded-2xl shadow-2xl border border-white/20 backdrop-blur-sm"
-      >
-        <div class="flex flex-col gap-1">
-          <p class="text-sm md:text-base font-bold flex justify-between gap-4">
-            <span>এনরোলমেন্ট শুরু:</span>
-            <span class="text-yellow-300">10th Jun, 2026</span>
-          </p>
-          <p class="text-sm md:text-base font-bold flex justify-between gap-4">
-            <span>এনরোলমেন্ট শেষ:</span>
-            <span class="text-yellow-200">24th Jun, 2026</span>
-          </p>
+      <div class="relative group">
+        <div
+          class="absolute -inset-0.5 bg-gradient-to-r from-indigo-500 via-blue-500 to-emerald-500 rounded-2xl blur opacity-30 group-hover:opacity-60 transition duration-1000 group-hover:duration-200 animate-pulse"
+        ></div>
+
+        <div
+          class="relative bg-[#0d1117]/90 text-white p-3 md:p-4 rounded-xl md:rounded-2xl shadow-2xl border border-white/10 backdrop-blur-md"
+        >
+          <div class="flex flex-col gap-1.5">
+            <p
+              class="text-[11px] md:text-sm font-bold flex items-center justify-between gap-4"
+            >
+              <span class="flex items-center gap-2 text-slate-400">
+                <span class="relative flex h-2 w-2">
+                  <span
+                    class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-75"
+                  ></span>
+                  <span
+                    class="relative inline-flex rounded-full h-2 w-2 bg-emerald-500"
+                  ></span>
+                </span>
+                এনরোলমেন্ট শুরু:
+              </span>
+              <span class="text-emerald-400 font-black">10th Jun, 2026</span>
+            </p>
+
+            <div class="h-[1px] w-full bg-white/10"></div>
+
+            <p
+              class="text-[11px] md:text-sm font-bold flex items-center justify-between gap-4"
+            >
+              <span class="flex items-center gap-2 text-slate-400">
+                <span class="w-1.5 h-1.5 rounded-full bg-rose-500"></span>
+                এনরোলমেন্ট শেষ:
+              </span>
+              <span class="text-rose-400 font-black">24th Jun, 2026</span>
+            </p>
+          </div>
         </div>
       </div>
     </div>
