--- a/index.html
+++ b/index.html
@@ -155,57 +155,105 @@
     <!-- Navbar Section Ends Here -->
 
     <!-- Banner Section Starts Here -->
-   <meta name="google" content="notranslate" />
+    <meta name="google" content="notranslate" />
 
-<header class="relative min-h-fit lg:min-h-[75vh] flex flex-col items-center justify-start bg-[#05070a] text-white pt-6 md:pt-10 pb-16 px-4 overflow-hidden font-['Plus_Jakarta_Sans',sans-serif]">
-  
-  <div class="absolute top-0 left-0 w-[300px] md:w-[500px] h-[300px] md:h-[500px] bg-indigo-600/15 rounded-full -translate-x-1/2 -translate-y-1/2 blur-[100px] md:blur-[140px]"></div>
-  <div class="absolute bottom-0 right-0 w-[400px] md:w-[600px] h-[400px] md:h-[600px] bg-blue-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px] md:blur-[140px]"></div>
+    <header
+      class="relative min-h-fit lg:min-h-[75vh] flex flex-col items-center justify-start bg-[#05070a] text-white pt-6 md:pt-10 pb-16 px-4 overflow-hidden font-['Plus_Jakarta_Sans',sans-serif]"
+    >
+      <div
+        class="absolute top-0 left-0 w-[300px] md:w-[500px] h-[300px] md:h-[500px] bg-indigo-600/15 rounded-full -translate-x-1/2 -translate-y-1/2 blur-[100px] md:blur-[140px]"
+      ></div>
+      <div
+        class="absolute bottom-0 right-0 w-[400px] md:w-[600px] h-[400px] md:h-[600px] bg-blue-500/10 rounded-full translate-x-1/3 translate-y-1/3 blur-[100px] md:blur-[140px]"
+      ></div>
 
-  <div class="w-full max-w-7xl mx-auto text-center relative z-10 px-2">
-    
-    <h1 class="font-black tracking-tight flex flex-col items-center mt-2 md:mt-4">
-      <span class="text-2xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-300 leading-tight mb-1">
-        শূণ্য থেকে শুরু করে হয়ে ওঠো
-      </span>
+      <div class="w-full max-w-7xl mx-auto text-center relative z-10 px-2">
+        <h1
+          class="font-black tracking-tight flex flex-col items-center mt-2 md:mt-4"
+        >
+          <span
+            class="text-2xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-7xl text-slate-300 leading-tight mb-1"
+          >
+            শূণ্য থেকে শুরু করে হয়ে ওঠো
+          </span>
 
-      <span class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-orange-500 drop-shadow-[0_10px_20px_rgba(234,179,8,0.2)] leading-tight py-1">
-        Confident Speaker
-      </span>
-    </h1>
+          <span
+            class="text-4xl sm:text-6xl md:text-7xl lg:text-8xl xl:text-9xl text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-400 to-orange-500 drop-shadow-[0_10px_20px_rgba(234,179,8,0.2)] leading-tight py-1"
+          >
+            Confident Speaker
+          </span>
+        </h1>
 
-    <div class="mt-4 md:mt-6 mb-6 md:mb-8 max-w-5xl mx-auto">
-      <p class="text-base sm:text-lg md:text-xl lg:text-2xl text-slate-400 leading-relaxed font-medium px-2">
-        ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়? 
-        <span class="text-indigo-400 font-bold uppercase tracking-wider text-lg md:text-2xl">১৫ দিনের</span> 
-        এই ইনটেনসিভ বুটক্যাম্পে 
-        <span class="text-white border-b border-indigo-500/30">আমরা ব্যাকরণ মুখস্থ করব না</span>, কিন্তু 
-        <span class="text-white border-b border-indigo-500/30">ABCD থেকে শুরু করে Auxiliary Verb, Tense, Preposition, Sentence Making Structure</span> 
-        এবং 
-        <span class="text-white border-b border-indigo-500/30">Oxford 3000 Vocabulary</span> 
-        সবই শিখব।
-      </p>
+        <div class="mt-4 md:mt-6 mb-6 md:mb-8 max-w-5xl mx-auto">
+          <p
+            class="text-base sm:text-lg md:text-xl lg:text-2xl text-slate-400 leading-relaxed font-medium px-2"
+          >
+            ইংরেজি বলা কি পাহাড়সম কঠিন মনে হয়?
+            <span
+              class="text-indigo-400 font-bold uppercase tracking-wider text-lg md:text-2xl"
+              >১৫ দিনের</span
+            >
+            এই ইনটেনসিভ বুটক্যাম্পে
+            <span class="text-white border-b border-indigo-500/30"
+              >আমরা ব্যাকরণ মুখস্থ করব না</span
+            >, কিন্তু
+            <span class="text-white border-b border-indigo-500/30"
+              >ABCD থেকে শুরু করে Auxiliary Verb, Tense, Preposition, Sentence
+              Making Structure</span
+            >
+            এবং
+            <span class="text-white border-b border-indigo-500/30"
+              >Oxford 3000 Vocabulary</span
+            >
+            সবই শিখব।
+          </p>
 
-      <div class="mt-4 md:mt-6">
-        <span class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-[10px] md:text-sm bg-indigo-500/5 px-4 py-2 rounded-full border border-indigo-500/10">
-          🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
-        </span>
+          <div class="mt-4 md:mt-6">
+            <span
+              class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-[10px] md:text-sm bg-indigo-500/5 px-4 py-2 rounded-full border border-indigo-500/10"
+            >
+              🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
+            </span>
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col sm:flex-row justify-center items-center gap-6 mt-10"
+        >
+          <a
+            onclick="openModal()"
+            class=" sm:w-auto group relative cursor-pointer overflow-hidden rounded-2xl px-10 md:px-14 py-4 md:py-5 text-lg md:text-2xl font-black text-white transition-all hover:scale-105 active:scale-95 shadow-[0_20px_50px_rgba(234,179,8,0.3)]"
+          >
+            <div
+              class="absolute inset-0 bg-gradient-to-r from-[#a855f7] via-[#ec4899] to-[#f97316] transition-opacity duration-500"
+            ></div>
+
+            <div
+              class="absolute inset-0 bg-gradient-to-r from-[#f59e0b] to-[#ea580c] opacity-0 group-hover:opacity-100 transition-opacity duration-500"
+            ></div>
+
+            <span
+              class="relative z-10 flex items-center justify-center gap-2 tracking-wide"
+            >
+              এখনই এনরোল করো
+              <svg
+                class="w-6 h-6 group-hover:translate-x-1 transition-transform"
+                fill="none"
+                stroke="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2.5"
+                  d="M13 7l5 5m0 0l-5 5m5-5H6"
+                ></path>
+              </svg>
+            </span>
+          </a>
+        </div>
       </div>
-    </div>
-
-    <div class="flex flex-col sm:flex-row justify-center items-center gap-6">
-      <a
-        onclick="openModal()"
-        class="w-full sm:w-auto group relative cursor-pointer overflow-hidden bg-white text-blue-950 px-10 md:px-14 py-4 md:py-5 rounded-2xl text-lg md:text-2xl font-black transition-all hover:scale-105 active:scale-95 shadow-2xl"
-      >
-        <span class="relative z-10 flex items-center justify-center gap-2">
-          বুটক্যাম্পে যুক্ত হোন 🚀
-        </span>
-        <div class="absolute inset-0 bg-gradient-to-r from-yellow-400 to-orange-400 opacity-0 group-hover:opacity-100 transition-opacity"></div>
-      </a>
-    </div>
-  </div>
-</header>
+    </header>
     <!-- Banner Section Ends Here -->
 
     <!-- Your Pera Our Solution Section Starts Here -->
