--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
             সবই শিখব, যেভাবে শিখলে Fluently ইংলিশে কথা বলা যায়।
           </p>
 
-          <!-- <div class="mt-4 md:mt-6">
+          <div class="mt-4 md:mt-6">
             <span
               class="inline-block text-indigo-400 font-bold uppercase tracking-[0.15em] text-[10px] md:text-sm bg-indigo-500/5 px-4 py-2 rounded-full border border-indigo-500/10"
             >
               🚀 আপনার ফ্লুয়েন্সি মাত্র ১৫ দিনের দূরত্বে!
             </span>
-          </div> -->
+          </div>
         </div>
 
         <div
