--- a/success.html
+++ b/success.html
@@ -3,18 +3,115 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google" content="notranslate" />
     <title>Registration Successful | Fluentosh</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      body {
+        font-family: "Plus Jakarta Sans", sans-serif;
+        background-color: #05070a;
+      }
+      @keyframes scaleIn {
+        0% {
+          transform: scale(0.9);
+          opacity: 0;
+        }
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+      .animate-scale-in {
+        animation: scaleIn 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+    </style>
   </head>
-  <body class="bg-slate-50 flex items-center justify-center min-h-screen p-6">
+  <body
+    class="flex items-center justify-center min-h-screen p-6 relative overflow-hidden"
+  >
     <div
-      class="max-w-md w-full bg-white rounded-3xl shadow-2xl p-10 text-center border border-slate-100"
+      class="absolute -top-24 -left-24 w-96 h-96 bg-indigo-600/10 blur-[120px] rounded-full"
+    ></div>
+    <div
+      class="absolute -bottom-24 -right-24 w-96 h-96 bg-rose-600/10 blur-[120px] rounded-full"
+    ></div>
+
+    <div
+      class="max-w-md w-full bg-slate-900/40 backdrop-blur-xl rounded-[2.5rem] p-10 text-center border border-white/10 shadow-2xl relative z-10 animate-scale-in"
     >
+      <div class="relative w-24 h-24 mx-auto mb-8">
+        <div
+          class="absolute inset-0 bg-emerald-500 blur-3xl opacity-20 animate-pulse"
+        ></div>
+        <div
+          class="relative w-24 h-24 bg-emerald-500/10 text-emerald-500 rounded-full flex items-center justify-center border border-emerald-500/20 shadow-inner"
+        >
+          <svg
+            class="w-12 h-12"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="3"
+              d="M5 13l4 4L19 7"
+            ></path>
+          </svg>
+        </div>
+      </div>
+
+      <h1 class="text-3xl font-black text-white mb-4 tracking-tight uppercase">
+        অভিনন্দন!
+      </h1>
+
+      <p class="text-slate-400 mb-8 leading-relaxed">
+        আপনার ভর্তি আবেদনটি সফলভাবে গৃহীত হয়েছে। আমাদের টিম পেমেন্ট যাচাই করে
+        আগামী
+        <span
+          class="text-indigo-400 font-bold italic underline decoration-indigo-500/30"
+          >২৪ ঘন্টার মধ্যে</span
+        >
+        হোয়াটসঅ্যাপে কনফার্মেশন মেসেজ পাঠাবে।
+      </p>
+
       <div
-        class="w-24 h-24 bg-green-100 text-green-600 rounded-full flex items-center justify-center mx-auto mb-6 animate-bounce-in"
+        class="bg-emerald-500/5 rounded-2xl p-5 mb-8 border border-emerald-500/10 text-sm"
       >
+        <p
+          class="text-slate-500 mb-1 tracking-wide uppercase text-[10px] font-bold"
+        >
+          যেকোনো প্রয়োজনে WhatsApp করুন
+        </p>
+        <a
+          href="https://wa.me/8801891554173"
+          target="_blank"
+          class="text-xl font-black text-emerald-400 tracking-wider hover:text-emerald-300 transition-colors flex items-center justify-center gap-2"
+        >
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+            <path
+              d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.434 5.633 1.435h.006c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"
+            />
+          </svg>
+          01891-554173
+        </a>
+      </div>
+
+      <a
+        href="index.html"
+        class="group relative inline-flex items-center justify-center w-full bg-gradient-to-r from-indigo-600 via-purple-600 to-rose-600 text-white px-4 md:px-8 py-4 rounded-2xl font-black transition-all hover:scale-[1.02] shadow-[0_0_20px_rgba(99,102,241,0.4)] active:scale-95 border-none outline-none"
+      >
+        <span class="text-sm md:text-base whitespace-nowrap tracking-wide"
+          >হোম পেজে ফিরে যান</span
+        >
         <svg
-          class="w-12 h-12"
+          class="w-5 h-5 ml-2 flex-shrink-0 group-hover:translate-x-1 transition-transform duration-300"
           fill="none"
           stroke="currentColor"
           viewBox="0 0 24 24"
@@ -22,50 +119,58 @@
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke-width="3"
-            d="M5 13l4 4L19 7"
+            stroke-width="2.5"
+            d="M14 5l7 7m0 0l-7 7m7-7H3"
           ></path>
         </svg>
-      </div>
-
-      <h1
-        class="text-3xl font-black text-slate-800 mb-4 tracking-tight uppercase"
-      >
-        অভিনন্দন!
-      </h1>
-      <p class="text-slate-600 mb-8 leading-relaxed">
-        আপনার ভর্তি আবেদনটি সফলভাবে গৃহীত হয়েছে। আমাদের টিম আপনার পেমেন্ট যাচাই
-        করে আগামী
-        <span class="font-bold text-indigo-600">24 ঘন্টার মধ্যে</span>
-        হোয়াটসঅ্যাপে কনফার্মেশন মেসেজ পাঠাবে।
-      </p>
-
-      <div
-        class="bg-indigo-50 rounded-2xl p-4 mb-8 text-sm text-indigo-800 font-medium"
-      >
-        যেকোনো প্রয়োজনে আমাদের সাথে যোগাযোগ করুন: <br />
-        <span class="font-bold">01332-502004</span>
-      </div>
-
-      <a
-        href="index.html"
-        class="inline-block bg-slate-900 text-white px-8 py-3 rounded-xl font-bold hover:bg-indigo-600 transition shadow-lg"
-      >
-        হোম পেজে ফিরে যান
       </a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
+
     <script>
-      // পেজ লোড হওয়ার সাথে সাথে কনফেত্তি ইফেক্ট
       document.addEventListener("DOMContentLoaded", () => {
+        // ১. সাউন্ড প্লে করার ফাংশন
+        const playSound = () => {
+          // এটি একটি ছোট 'Success/Notification' সাউন্ড
+          const audio = new Audio(
+            "https://assets.mixkit.co/active_storage/sfx/2013/2013-preview.mp3",
+          );
+          audio.volume = 0.4;
+          audio
+            .play()
+            .catch((err) => console.log("Audio autoplay blocked by browser."));
+        };
+
+        // ২. কনফেত্তি ইমপ্যাক্ট (Side Burst Style)
         if (typeof confetti !== "undefined") {
-          confetti({
-            particleCount: 150, // কতগুলো টুকরা উড়বে
-            spread: 90, // কতটুকু জায়গা জুড়ে ছড়াবে
-            origin: { y: 0.6 }, // স্ক্রিনের মাঝ বরাবর উপরে থেকে শুরু হবে
-          });
+          const duration = 3 * 1000;
+          const end = Date.now() + duration;
+
+          (function frame() {
+            confetti({
+              particleCount: 3,
+              angle: 60,
+              spread: 55,
+              origin: { x: 0 },
+              colors: ["#6366f1", "#10b981", "#ffffff"],
+            });
+            confetti({
+              particleCount: 3,
+              angle: 120,
+              spread: 55,
+              origin: { x: 1 },
+              colors: ["#6366f1", "#10b981", "#ffffff"],
+            });
+
+            if (Date.now() < end) {
+              requestAnimationFrame(frame);
+            }
+          })();
         }
+
+        // ৩. সাউন্ড ট্রিগার
+        playSound();
       });
     </script>
   </body>
