vocabulary link problem fixed

--- a/Vocabulary_course/banner.html
+++ b/Vocabulary_course/banner.html
@@ -152,7 +152,7 @@
                 <p class="text-slate-500 text-[10px]">ইংরেজি বলা শিখুন সহজে</p>
               </div>
             </a>
-            <a href="./Vocabulary_course/vocabulary.html" class="flex items-center gap-3 p-3 rounded-xl hover:bg-slate-800 transition-colors mt-1">
+            <a href="./banner.html" class="flex items-center gap-3 p-3 rounded-xl hover:bg-slate-800 transition-colors mt-1">
               <div class="w-10 h-10 bg-rose-500/10 text-rose-400 rounded-lg flex items-center justify-center font-bold">V</div>
               <div>
                 <p class="text-white text-sm font-bold">Vocabulary Course</p>
@@ -199,7 +199,7 @@
         </div>
       </a>
 
-      <a href="./Vocabulary_course/vocabulary.html" class="flex items-center gap-4 bg-slate-900/40 border border-white/5 p-5 rounded-3xl active:bg-rose-600/20 transition-all">
+      <a href="./banner.html" class="flex items-center gap-4 bg-slate-900/40 border border-white/5 p-5 rounded-3xl active:bg-rose-600/20 transition-all">
         <div class="w-12 h-12 bg-rose-500/10 text-rose-400 rounded-2xl flex items-center justify-center">
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
         </div>
