--- a/index.html
+++ b/index.html
@@ -2075,7 +2075,7 @@
                 <p
                   class="text-xl font-black text-white group-hover:text-indigo-400 transition-colors"
                 >
-                  01332-502004
+                  01XXXXXXXXX
                 </p>
                 <p class="text-[10px] text-indigo-400/80">
                   Sat-Thu, 10 AM - 7 PM
