--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google" content="notranslate" />
-    <title>Fluentosh - 10 Days Spoken English Bootcamp</title>
+    <title>Fluentosh - 30 Days Spoken English Bootcamp</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- connect google fonts -->
@@ -1854,7 +1854,7 @@
                 class="text-white font-bold italic underline decoration-indigo-500 decoration-2"
                 >Fluentosh</span
               >
-              বুটক্যাম্পে তুমি পাবে ১৫ দিনের ইনটেনসিভ ওরাল ড্রিলস।
+              বুটক্যাম্পে তুমি পাবে ৩০ দিনের ইনটেনসিভ ওরাল ড্রিলস।
             </p>
 
             <div
@@ -2296,13 +2296,13 @@
               >স্পেশাল অফার</span
             >
             <h3 class="text-4xl font-black mt-2 leading-tight">
-              ৳২৯৯ <span class="text-lg font-medium opacity-80">মাত্র</span>
+              ৳৫১০ <span class="text-lg font-medium opacity-80">মাত্র</span>
             </h3>
           </div>
 
           <p class="text-sm text-indigo-100 mb-8 leading-relaxed">
-            নিচের নম্বরটিতে
-            <span class="font-bold underline text-white">Send Money</span> করো।
+            ভর্তির জন্য নিচের নম্বরে <span class="text-sm font-black">৫১০ টাকা</span> বিকাশ বা নগদ থেকে
+            <span class="font-bold underline text-white">Send Money</span> করুন।
             নম্বরটির ওপর ক্লিক করলেই কপি হয়ে যাবে।
           </p>
 
